5332
this slight variant also triggers the error. could be part of the test coverage if a fix is found:
```
scala> { class A; class B extends A; classOf[B] }
<console>:7: error: type mismatch;
 found   : java.lang.Class[B(in value res4)] where type B(in value res4) <: A with ScalaObject
 required: java.lang.Class[_ <: A with ScalaObject]
       val res4 =
           ^
```
